fix model page name

--- a/EmployeeManagementSite/Pages/LoginPages/Login.cshtml
+++ b/EmployeeManagementSite/Pages/LoginPages/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model eBookStoreFE.Pages.Auth.LoginModel
+@model EmployeeManagementSite.Pages.LoginPages.LoginModel
 @{
 }
 <h1 class="text-center">Login</h1>
