search detail delete

--- a/EmployeeManagementSite/Pages/AccessDenied.cshtml
+++ b/EmployeeManagementSite/Pages/AccessDenied.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model eBookStoreFE.Pages.AccessDeniedModel
 @{
+    Layout = null;
 }
 <h1>
     You are not allowed to access this function!
