--- a/EmployeeManagementSite/Pages/LoginPages/Login.cshtml
+++ b/EmployeeManagementSite/Pages/LoginPages/Login.cshtml
@@ -14,23 +14,65 @@
 </head>
 <body>
     <h1 class="text-center">Login</h1>
-    <form method="post" class="m-2 p-3 bg-light">
-        <div class="form-group">
-            <label asp-for="@Model.UserInput.Email"></label>
-            <input type="text" asp-for="@Model.UserInput.Email" class="form-control" />
-            <span asp-validation-for="@Model.UserInput.Email" class="text-danger"></span>
-        </div>
-        <div>
-            <label asp-for="@Model.UserInput.Password"></label>
-            <input type="password" asp-for="@Model.UserInput.Password" class="form-control" />
-            <span asp-validation-for="@Model.UserInput.Password" class="text-danger"></span>
-        </div>
-        <div class="form-group mt-3">
-            <button class="btn btn-primary" type="submit">Sign in</button>
-        </div>
-    </form>
+    @*<form method="post" class="m-2 p-3 bg-light">
+            <div class="form-group">
+                <label asp-for="@Model.UserInput.Email"></label>
+                <input type="text" asp-for="@Model.UserInput.Email" class="form-control" />
+                <span asp-validation-for="@Model.UserInput.Email" class="text-danger"></span>
+            </div>
+            <div>
+                <label asp-for="@Model.UserInput.Password"></label>
+                <input type="password" asp-for="@Model.UserInput.Password" class="form-control" />
+                <span asp-validation-for="@Model.UserInput.Password" class="text-danger"></span>
+            </div>
+            <div class="form-group mt-3">
+                <button class="btn btn-primary" type="submit">Sign in</button>
+            </div>
+        </form>*@
+    <div class="container border" style="padding:20px">
+        <form method="post" asp-page="Login">
+            <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+            <div class="form-group row">
+                <div class="col-2">
+                    <label asp-for="@Model.UserInput.Email"></label>
+                </div>
+                <div class="col-5">
+                    <input type="text" asp-for="@Model.UserInput.Email" class="form-control" />
+                </div>
+                <span class="text-danger" asp-validation-for="@Model.UserInput.Email"></span>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-2">
+                    <label asp-for="@Model.UserInput.Password"></label>
+                </div>
+                <div class="col-5">
+                    <input type="password" asp-for="@Model.UserInput.Password" class="form-control" />
+                </div>
+                <span class="text-danger" asp-validation-for="@Model.UserInput.Password"></span>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-2">
+                    <input type="submit" class="btn btn-primary" value="Login" />
+                </div>
+                <div class="col-5">
+                </div>
+            </div>
+        </form>
+    </div>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 </body>
 </html>
+
+@if (ViewData["Message"] != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewData["Message"]");
+            };
+    </script>
+}
