--- a/EmployeeManagementSite/Pages/Shared/_Layout.cshtml
+++ b/EmployeeManagementSite/Pages/Shared/_Layout.cshtml
@@ -17,6 +17,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
+            <div class="nav-item">
+                <a class="nav-link text-primary" asp-page="/LoginPages/Login" asp-page-handler="logout">Log out</a>
+            </div>
         </nav>
     </header>
     <div class="container">
