--- a/EmployeeManagementSite/Pages/EmployeePages/Delete.cshtml
+++ b/EmployeeManagementSite/Pages/EmployeePages/Delete.cshtml
@@ -34,7 +34,7 @@
             @Html.DisplayNameFor(model => model.Employee.Department)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Employee.DepartmentId)
+            @Html.DisplayFor(model => model.Employee.Department.DepartmentName)
         </dd>
     </dl>
     
